@@ -52,6 +52,21 @@ name|common
 operator|.
 name|params
 operator|.
+name|ShardParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|TermVectorParams
 import|;
 end_import
@@ -752,6 +767,43 @@ argument_list|,
 literal|"q"
 argument_list|,
 name|q
+argument_list|,
+name|TermVectorComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|,
+name|TermVectorParams
+operator|.
+name|ALL
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"sort"
+argument_list|,
+literal|"id desc"
+argument_list|,
+literal|"qt"
+argument_list|,
+name|tv
+argument_list|,
+literal|"q"
+argument_list|,
+name|q
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|1
+argument_list|,
+name|ShardParams
+operator|.
+name|DISTRIB_SINGLE_PASS
+argument_list|,
+literal|"true"
 argument_list|,
 name|TermVectorComponent
 operator|.
