@@ -268,6 +268,9 @@ Bug Fixes
   and then that replica is brought down, it will think it is up-to-date when
   restarted. (shalin, Mark Miller, yonik)
 
+* SOLR-8419: TermVectorComponent for distributed search when distrib.singlePass could include term
+  vectors for documents that matched the query yet weren't in the returned documents. (David Smiley)
+
 
 Other Changes
 ----------------------
@@ -344,6 +347,9 @@ Other Changes
 
 * SOLR-8279: Add a new test fault injection approach and a new SolrCloud test that stops and starts the cluster
   while indexing data and with random faults. (Mark Miller)
+
+* SOLR-8419: TermVectorComponent for distributed search now requires a uniqueKey in the schema.  Also, it no longer
+  returns "uniqueKeyField" in the response. (David Smiley)
 
 ==================  5.4.0 ==================
 
